# python-lambda-gateway

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  index.py  lambda_function.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: docker.yml  docker.yml.disabled  pytest.yml
lambda_gateway/: __init__.py  __main__.py  event_proxy.py  lambda_context.py  request_handler.py  server.py
tests/: test_event_proxy.py  test_lambda_context.py  test_lambda_function.py  test_main.py  test_request_handler.py  test_server.py
