[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [{name = "Alexander Mancevice", email = "alexander.mancevice@hey.com"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities",
]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "lambda_gateway"
requires-python = ">= 3.7"
readme = "README.md"

[project.urls]
Home = "https://github.com/amancevice/python-lambda-gateway"

[tool.pytest.ini_options]
minversion = "6.0"
addopts    = "--cov lambda_gateway --cov tests --cov-report term-missing --cov-report xml"
